--- a/layer_9_label_1_2.ipynb
+++ b/layer_9_label_1_2.ipynb
@@ -2267,6 +2267,50 @@
         "base_model = SVC()\n",
         "hyperparameter_tune(base_model, param_grid, 5, 5, X=train_reduced_df, y=train_label_2)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "\n",
+        "file_paths = ['predictions/label_1.csv', 'predictions/label_2.csv', 'predictions/label_3.csv', 'predictions/label_4.csv']\n",
+        "\n",
+        "# Initialize an empty DataFrame\n",
+        "merged_data = pd.DataFrame()\n",
+        "\n",
+        "# Initialize a counter for the \"ID\" column\n",
+        "id_counter = 1\n",
+        "\n",
+        "# Iterate through the file paths and merge the columns\n",
+        "for i, file_path in enumerate(file_paths, start=1):\n",
+        "    # Read each CSV file into a DataFrame\n",
+        "    df = pd.read_csv(file_path)\n",
+        "    \n",
+        "    # Extract the label name from the first row\n",
+        "    label_name = df.iloc[0, 0]\n",
+        "    \n",
+        "    # Rename the single column to the corresponding label\n",
+        "    df = df.rename(columns={df.columns[0]: f'label_{i}'})\n",
+        "    \n",
+        "    # Add the labeled column to the merged DataFrame\n",
+        "    merged_data = pd.concat([merged_data, df], axis=1)\n",
+        "\n",
+        "# Create the \"ID\" column with sequential numbers\n",
+        "id_column = pd.Series(range(1, merged_data.shape[0] + 1), name=\"ID\")\n",
+        "\n",
+        "# Insert the \"ID\" column as the first column\n",
+        "merged_data.insert(0, \"ID\", id_column)\n",
+        "\n",
+        "# Save the merged data to a new CSV file\n",
+        "merged_data.to_csv('combined_data.csv', index=False)\n",
+        "\n",
+        "\n",
+        "\n"
+      ]
     }
   ],
   "metadata": {
