--- a/Layer-10/label-3.ipynb
+++ b/Layer-10/label-3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
     "valid_features = valid.iloc[:, :768]\n",
     "valid_label_3 = valid.iloc[:, 770]\n",
     "\n",
-    "test_features = test.iloc[:, :768]"
+    "test_features = test.iloc[:, 1:]"
    ]
   },
   {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -166,20 +166,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Feature Scaling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import RobustScaler\n",
+    "transformer = RobustScaler()\n",
+    "scaled_train_features = transformer.fit_transform(train_features)\n",
+    "scaled_valid_features = transformer.fit_transform(valid_features)\n",
+    "scaled_test_features = transformer.fit_transform(test_features)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Addressing Class Imbalance Issues\n",
     "1. Use SMOTE oversampling to address class imbalance issue"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
     "from imblearn.over_sampling import SMOTE\n",
     "\n",
     "smote = SMOTE(sampling_strategy='auto', random_state=42)\n",
-    "train_feature_resampled, train_label_3_resampled = smote.fit_resample(train_features, train_label_3)"
+    "train_feature_resampled, train_label_3_resampled = smote.fit_resample(scaled_train_features, train_label_3)"
    ]
   },
   {
@@ -213,39 +233,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Feature Scaling"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.preprocessing import RobustScaler\n",
-    "transformer = RobustScaler()\n",
-    "scaled_train_features = transformer.fit_transform(train_feature_resampled)\n",
-    "scaled_valid_features = transformer.fit_transform(valid_features)\n",
-    "scaled_test_features = transformer.fit_transform(test_features)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "PCA Transformation "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.decomposition import PCA\n",
     "\n",
     "def performPca(train_input, valid_input,test_input, n_components):\n",
-    "    pca = PCA(n_components=n_components)\n",
+    "    pca = PCA(n_components=n_components , svd_solver='full')\n",
     "    train_reduced = pca.fit_transform(train_input)\n",
     "    valid_reduced = pca.transform(valid_input)\n",
     "    test_reduced = pca.transform(test_input)\n",
@@ -259,23 +259,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_reduced_df, valid_reduced_df,test_reduced_df = performPca(scaled_train_features, scaled_valid_features, scaled_test_features, 0.99)"
+    "train_reduced_df, valid_reduced_df,test_reduced_df = performPca(train_feature_resampled, scaled_valid_features, scaled_test_features, 0.99)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "F1 Score: 0.9712351945854484\n"
+      "F1 Score: 0.9991769547325102\n"
      ]
     }
    ],
@@ -289,22 +289,163 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#0.97\n",
     "test_predictions = model_.predict(test_reduced_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Write to file\n",
     "test_pred_df = pd.DataFrame(test_predictions, columns=['label_3'])\n",
     "test_pred_df.to_csv('predictions/label_3.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hyperparameter tuning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 36 candidates, totalling 180 fits\n",
+      "[CV 1/5] END ........C=0.1, gamma=1, kernel=rbf;, score=0.500 total time=11.2min\n",
+      "[CV 2/5] END ........C=0.1, gamma=1, kernel=rbf;, score=0.500 total time=16.5min\n",
+      "[CV 3/5] END ........C=0.1, gamma=1, kernel=rbf;, score=0.505 total time=21.7min\n",
+      "[CV 4/5] END ........C=0.1, gamma=1, kernel=rbf;, score=0.507 total time=21.3min\n",
+      "[CV 5/5] END ........C=0.1, gamma=1, kernel=rbf;, score=0.510 total time=21.2min\n",
+      "[CV 1/5] END .....C=0.1, gamma=1, kernel=linear;, score=0.986 total time=  18.8s\n",
+      "[CV 2/5] END .....C=0.1, gamma=1, kernel=linear;, score=0.995 total time=  21.2s\n",
+      "[CV 3/5] END .....C=0.1, gamma=1, kernel=linear;, score=0.991 total time=  20.1s\n",
+      "[CV 4/5] END .....C=0.1, gamma=1, kernel=linear;, score=0.992 total time=  20.6s\n",
+      "[CV 5/5] END .....C=0.1, gamma=1, kernel=linear;, score=0.999 total time=  22.1s\n",
+      "[CV 1/5] END .......C=0.1, gamma=1, kernel=poly;, score=0.990 total time= 4.2min\n",
+      "[CV 2/5] END .......C=0.1, gamma=1, kernel=poly;, score=0.997 total time= 4.8min\n",
+      "[CV 3/5] END .......C=0.1, gamma=1, kernel=poly;, score=0.996 total time= 4.6min\n",
+      "[CV 4/5] END .......C=0.1, gamma=1, kernel=poly;, score=0.997 total time= 4.7min\n",
+      "[CV 5/5] END .......C=0.1, gamma=1, kernel=poly;, score=0.999 total time= 5.0min\n",
+      "[CV 1/5] END ......C=0.1, gamma=0.1, kernel=rbf;, score=0.500 total time=19.4min\n",
+      "[CV 2/5] END ......C=0.1, gamma=0.1, kernel=rbf;, score=0.500 total time=19.7min\n",
+      "[CV 3/5] END ......C=0.1, gamma=0.1, kernel=rbf;, score=0.520 total time=19.5min\n",
+      "[CV 4/5] END ......C=0.1, gamma=0.1, kernel=rbf;, score=0.517 total time=19.3min\n",
+      "[CV 5/5] END ......C=0.1, gamma=0.1, kernel=rbf;, score=0.526 total time=19.5min\n",
+      "[CV 1/5] END ...C=0.1, gamma=0.1, kernel=linear;, score=0.986 total time=  18.6s\n",
+      "[CV 2/5] END ...C=0.1, gamma=0.1, kernel=linear;, score=0.995 total time=  20.8s\n",
+      "[CV 3/5] END ...C=0.1, gamma=0.1, kernel=linear;, score=0.991 total time=  20.0s\n",
+      "[CV 4/5] END ...C=0.1, gamma=0.1, kernel=linear;, score=0.992 total time=  20.5s\n",
+      "[CV 5/5] END ...C=0.1, gamma=0.1, kernel=linear;, score=0.999 total time=  22.3s\n",
+      "[CV 1/5] END .....C=0.1, gamma=0.1, kernel=poly;, score=0.990 total time= 4.3min\n",
+      "[CV 2/5] END .....C=0.1, gamma=0.1, kernel=poly;, score=0.997 total time= 4.9min\n",
+      "[CV 3/5] END .....C=0.1, gamma=0.1, kernel=poly;, score=0.996 total time= 4.6min\n",
+      "[CV 4/5] END .....C=0.1, gamma=0.1, kernel=poly;, score=0.997 total time= 4.7min\n",
+      "[CV 5/5] END .....C=0.1, gamma=0.1, kernel=poly;, score=0.999 total time= 5.0min\n",
+      "[CV 1/5] END .....C=0.1, gamma=0.01, kernel=rbf;, score=0.917 total time=18.2min\n",
+      "[CV 2/5] END .....C=0.1, gamma=0.01, kernel=rbf;, score=0.950 total time=17.0min\n",
+      "[CV 3/5] END .....C=0.1, gamma=0.01, kernel=rbf;, score=0.976 total time=14.9min\n",
+      "[CV 4/5] END .....C=0.1, gamma=0.01, kernel=rbf;, score=0.978 total time=14.9min\n",
+      "[CV 5/5] END .....C=0.1, gamma=0.01, kernel=rbf;, score=0.974 total time=15.2min\n",
+      "[CV 1/5] END ..C=0.1, gamma=0.01, kernel=linear;, score=0.986 total time=  15.8s\n",
+      "[CV 2/5] END ..C=0.1, gamma=0.01, kernel=linear;, score=0.995 total time=  17.7s\n",
+      "[CV 3/5] END ..C=0.1, gamma=0.01, kernel=linear;, score=0.991 total time=  17.2s\n",
+      "[CV 4/5] END ..C=0.1, gamma=0.01, kernel=linear;, score=0.992 total time=  17.2s\n",
+      "[CV 5/5] END ..C=0.1, gamma=0.01, kernel=linear;, score=0.999 total time=  20.0s\n",
+      "[CV 1/5] END ....C=0.1, gamma=0.01, kernel=poly;, score=0.990 total time= 3.7min\n",
+      "[CV 2/5] END ....C=0.1, gamma=0.01, kernel=poly;, score=0.997 total time= 4.2min\n",
+      "[CV 3/5] END ....C=0.1, gamma=0.01, kernel=poly;, score=0.996 total time= 4.0min\n",
+      "[CV 4/5] END ....C=0.1, gamma=0.01, kernel=poly;, score=0.997 total time= 4.1min\n",
+      "[CV 5/5] END ....C=0.1, gamma=0.01, kernel=poly;, score=0.999 total time= 4.1min\n",
+      "[CV 1/5] END ....C=0.1, gamma=0.001, kernel=rbf;, score=0.981 total time= 3.0min\n",
+      "[CV 2/5] END ....C=0.1, gamma=0.001, kernel=rbf;, score=0.989 total time= 2.9min\n",
+      "[CV 3/5] END ....C=0.1, gamma=0.001, kernel=rbf;, score=0.989 total time= 2.4min\n",
+      "[CV 4/5] END ....C=0.1, gamma=0.001, kernel=rbf;, score=0.992 total time= 2.5min\n",
+      "[CV 5/5] END ....C=0.1, gamma=0.001, kernel=rbf;, score=0.993 total time= 3.2min\n",
+      "[CV 1/5] END .C=0.1, gamma=0.001, kernel=linear;, score=0.986 total time=  15.5s\n",
+      "[CV 2/5] END .C=0.1, gamma=0.001, kernel=linear;, score=0.995 total time=  17.6s\n",
+      "[CV 3/5] END .C=0.1, gamma=0.001, kernel=linear;, score=0.991 total time=  17.2s\n",
+      "[CV 4/5] END .C=0.1, gamma=0.001, kernel=linear;, score=0.992 total time=  17.7s\n",
+      "[CV 5/5] END .C=0.1, gamma=0.001, kernel=linear;, score=0.999 total time=  18.7s\n",
+      "[CV 1/5] END ...C=0.1, gamma=0.001, kernel=poly;, score=0.962 total time=13.1min\n",
+      "[CV 2/5] END ...C=0.1, gamma=0.001, kernel=poly;, score=0.983 total time=13.2min\n",
+      "[CV 3/5] END ...C=0.1, gamma=0.001, kernel=poly;, score=0.977 total time=13.1min\n",
+      "[CV 4/5] END ...C=0.1, gamma=0.001, kernel=poly;, score=0.980 total time=12.3min\n",
+      "[CV 5/5] END ...C=0.1, gamma=0.001, kernel=poly;, score=0.987 total time=12.1min\n",
+      "[CV 1/5] END ..........C=1, gamma=1, kernel=rbf;, score=0.742 total time=43.1min\n",
+      "[CV 2/5] END ..........C=1, gamma=1, kernel=rbf;, score=0.672 total time=47.7min\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "\n",
+    "\n",
+    "# defining parameter range\n",
+    "param_grid = {'C': [0.1, 1, 10], \n",
+    "              'gamma': [1, 0.1, 0.01, 0.001],\n",
+    "              'kernel': ['rbf' , 'linear', 'poly']} \n",
+    "  \n",
+    "grid = GridSearchCV(SVC(), param_grid, refit = True, verbose = 3)\n",
+    "  \n",
+    "# fitting the model for grid search\n",
+    "grid.fit(train_reduced_df, train_label_3_resampled)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F1 Score: 0.8975521305530372\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.svm import SVC\n",
+    "from sklearn.metrics import f1_score\n",
+    "fin_model_ = SVC(C=0.1, gamma=1, kernel='linear')\n",
+    "fin_model_.fit(train_reduced_df, train_label_3_resampled)\n",
+    "fin_y_pred = fin_model_.predict(valid_reduced_df)\n",
+    "accuracy = f1_score(valid_label_3, fin_y_pred)\n",
+    "print(f\"F1 Score: {accuracy}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fin_test_predictions = fin_model_.predict(test_reduced_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fin_test_pred_df = pd.DataFrame(fin_test_predictions, columns=['label_3'])\n",
+    "fin_test_pred_df.to_csv('predictions/label_3.csv', index=False)"
    ]
   }
  ],
