--- a/Layer-10/label-1.ipynb
+++ b/Layer-10/label-1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
        "Length: 772, dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
        "Length: 772, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
     "valid_features = valid.iloc[:, :768]\n",
     "valid_label_1 = valid.iloc[:, 768]\n",
     "\n",
-    "test_features = test.iloc[:, :768]"
+    "test_features = test.iloc[:, 1:]"
    ]
   },
   {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -159,19 +159,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Random Forest - Average Accuracy: 0.8722650771388499\n",
-      "SVM - Average Accuracy: 0.933695652173913\n",
-      "Best Model: SVC\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "from sklearn.model_selection import StratifiedKFold\n",
@@ -226,14 +216,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.decomposition import PCA\n",
     "\n",
     "def performPca(train_input, valid_input,test_input, n_components):\n",
-    "    pca = PCA(n_components=n_components)\n",
+    "    pca = PCA(n_components=n_components , svd_solver='full')\n",
     "    train_reduced = pca.fit_transform(train_input)\n",
     "    valid_reduced = pca.transform(valid_input)\n",
     "    test_reduced = pca.transform(test_input)\n",
@@ -247,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -290,16 +280,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 0.99 ----- > 0.9533333333333334\n",
+    "# mle -------> 0.9533333333333334    767\n",
+    "# 300 -------> 0.9533333333333334    300\n",
     "test_pred = model.predict(test_reduced_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,6 +306,69 @@
    "metadata": {},
    "source": [
     "# Hyperparameter tuning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.svm import SVC\n",
+    "\n",
+    "# defining parameter range\n",
+    "param_grid = {'C': [0.1, 1, 10], \n",
+    "              'gamma': [1, 0.1, 0.01, 0.001],\n",
+    "              'kernel': ['rbf' , 'linear', 'poly']} \n",
+    "  \n",
+    "grid = GridSearchCV(SVC(), param_grid, refit = True, verbose = 3)\n",
+    "  \n",
+    "# fitting the model for grid search\n",
+    "grid.fit(train_reduced_df, train_label_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.964\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.svm import SVC\n",
+    "\n",
+    "fin_model = SVC(C= 0.1, gamma = 1, kernel = 'linear')\n",
+    "fin_model.fit(train_reduced_df, train_label_1)\n",
+    "fin_y_pred = fin_model.predict(valid_reduced_df)\n",
+    "accuracy = accuracy_score(valid_label_1, fin_y_pred)\n",
+    "print(f\"Accuracy: {accuracy}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fin_test_pred = fin_model.predict(test_reduced_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Write to file\n",
+    "fin_test_pred_df = pd.DataFrame(fin_test_pred, columns=['label_1'])\n",
+    "fin_test_pred_df.to_csv('predictions/label_1_1.csv', index=False)"
    ]
   }
  ],
